--- a/triangles.html
+++ b/triangles.html
@@ -25,7 +25,7 @@
 			</form>
 
 			<div id="result">
-				<p><span class="year"></span> is <span class="not"></span> a leap year.</p>
+				<p>The 3 lengths you have entered is<span class="triangle"></span>  Triangle.</p>
 			</div>
 		</div>
 	</body>
