Add README file.

--- a/triangles.html
+++ b/triangles.html
@@ -20,12 +20,12 @@
 					<label for="side3">Side 3: </label>
 					<input id="side3" type="text">
 				</div>
-
+				<br>
 				<button type="submit" class="btn">Is It A Triangle?</button>
 			</form>
 
 			<div id="result">
-				<p>The 3 lengths you have entered is<span class="triangle"></span>  Triangle.</p>
+				<p>The 3 lengths (<span class="side1"></span>, <span class="side2"></span>, <span class="side3"></span>) you have entered is<span class="triangle"></span>  Triangle.</p>
 			</div>
 		</div>
 	</body>
