--- a/triangles.html
+++ b/triangles.html
@@ -14,11 +14,11 @@
 			<form id="sides">
 				<div class="form-group">
 					<label for="side1">Side 1: </label>
-					<input id="side1" type="text">
+					<input id="side1" type="text" required>
 					<label for="side2">Side 2: </label>
-					<input id="side2" type="text">
+					<input id="side2" type="text" required>
 					<label for="side3">Side 3: </label>
-					<input id="side3" type="text">
+					<input id="side3" type="text" required>
 				</div>
 				<br>
 				<button type="submit" class="btn">Is It A Triangle?</button>
